--- a/css/style.css
+++ b/css/style.css
@@ -37,13 +37,10 @@ main{
 
 .icnos-profile{
     height: 90%;
-    /* width: 50%; */
+
 }
 
-.icnos-profile img{
-    height: 100%;
-   
-}
+
 
 #user-name{
     font-size: 0.8rem;
@@ -83,14 +80,18 @@ div#notification-content{
     background-color: white;
 }
 
-/* #list-friend{
-    overflow: hidden;
-} */
+#list-friend{
+   width: 100%;
+}
 #menu-friend{
     background-color: white;
   height: calc(100vh - 190px);
     overflow: auto;
     
+}
+.user-friend{
+    height: 50px;
+    width: 100%;
 }
 .user-friend:hover{
     background-color:RGB(233,235,235);
